--- a/front/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/front/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -14,7 +14,9 @@
         <tr *ngFor='let book of books; let idx=index'>
            <td>{{idx+1}}</td>
            <td>{{book.name}}</td>
-           <td>{{book.authors}}</td>
+           <div *ngFor="let author of book.authors">
+            <td>{{author.fullName}}</td>
+           </div>
            <td>{{book.amount}}</td>
            <td>{{book.amount-1}}</td>
            <td>Readers</td>                      
