--- a/front/src/app/home-page/home-page.component.html
+++ b/front/src/app/home-page/home-page.component.html
@@ -1,6 +1,10 @@
 <div class="books"
 *ngIf='books$ | async as books'
 >
+<div class="validation">
+  <small>
+      <div class="alert alert-danger" *ngIf="bookService.takeReturnBookError"> {{bookService.takeReturnBookError}} </div>
+  </small>
   <app-book *ngFor="let book of books" [book]="book" [isAutentificated]="isAutentificated"></app-book>
 
 </div>
