--- a/front/src/app/shared/components/main-layout/main-layout.component.html
+++ b/front/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,30 +1,21 @@
 <nav class="navbar bg-primary">
     <h1>Library</h1>
+
     <h4>
-        <a [routerLink]="['/admin','dashboard']">Admin panel</a>
-    </h4>
-    <h4 id='admin'>
-        <a [routerLink]="['/admin','login']">Вход</a>
+        <ul>
+            <li *ngIf="authService.isRoleAdmin()">
+                <a [routerLink]="['/admin','dashboard']">Admin panel</a>                
+            </li>
+
+            <li *ngIf="authService.isAutentificated(); else loginP">
+                <a href="#" (click)="logout($event)">Sing out</a>             
+            </li>
+            <ng-template #loginP>
+                <li><a [routerLink]="['/admin','login']">Sing in</a></li>      
+            </ng-template>   
+        </ul>
     </h4>
 </nav>
-
-<!-- <nav class="navbar bg-primary">
-    <h1>
-        <a routerLink="/">Angular Admin</a>
-    </h1>
-    <ul *ngIf="authService.isAutentificated()">
-        <li>
-            <a [routerLink]="['/admin','dashboard']">Главная</a>
-        </li>
-        <li>
-            <a [routerLink]="['/admin','create']">Создать</a>
-        </li>
-        <li>
-            <a href="#" (click)="logout($event)">Выход</a>
-        </li>
-    </ul>
-    </nav> -->
-
 
 <div class="conteiner">
     <router-outlet></router-outlet>
