fix bug registration

--- a/front/src/app/registration-page/registration-page.component.html
+++ b/front/src/app/registration-page/registration-page.component.html
@@ -25,7 +25,7 @@
         <button type="submit" class="btn btn-primary">Registration</button>
         <button class="btn btn-link open"
         (click)="this.auth.ClearAuthError()"
-        [routerLink]="['/admin','login']"
+        [routerLink]="['/','login']"
         >Sing in</button>
     </div>
 </form>
