--- a/front/src/app/login-page/login-page.component.html
+++ b/front/src/app/login-page/login-page.component.html
@@ -25,7 +25,7 @@
         <button type="submit" class="btn btn-primary">Sing in</button>
         <button class="btn btn-link open"
         (click)="this.auth.ClearAuthError()"
-        [routerLink]="['/admin','registration']"
+        [routerLink]="['/','registration']"
         >Registration</button>
     </div>
 
