--- a/front/src/app/shared/components/main-layout/main-layout.component.html
+++ b/front/src/app/shared/components/main-layout/main-layout.component.html
@@ -12,7 +12,7 @@
                 <a href="#" (click)="logout($event)">Sing out</a>             
             </li>
             <ng-template #loginP>
-                <li><a [routerLink]="['/admin','login']">Sing in</a></li>      
+                <li><a [routerLink]="['/','login']">Sing in</a></li>      
             </ng-template>   
         </ul>
     </h4>
